--- a/src/app/components/son/experience/experience.component.html
+++ b/src/app/components/son/experience/experience.component.html
@@ -5,7 +5,7 @@
   </div>
   <div class="row  justify-content-around ">
     <div *ngFor="let experience of experiences" class="col-lg-3 mx-2  mb-4 p-0 col-md-5 col-12 shadow min-h rounded pointer experience"
-         role="button" [routerLink]="['/portFolio/detailExperience', experience.id]">
+         role="button" [routerLink]="['/detailExperience', experience.id]">
       <div style="background: url('{{experience.mainImage}}') no-repeat center top / cover;
     background-size: 100%;
     height: 56%;" class="animate__animated animate__zoomIn" ></div>
